IGNITE-13306 Add Java 11 specific JVM flag for fixing CPU load metric - Fixes #8088
Signed-off-by: Ivan Rakov <ivan.glukos@gmail.com>
(cherry picked from commit 65e0ca879975d7aa88d9d94dbb19db1d8ac9a39f)